tests/baselines/Issue63.txt
original file
-----------------------------------
^^type ^^Callback <^^T> = ^^(error: Error, value: T) => any

^^type Callback^^<T > = ^^(error: Error, value: T) ^^=> ^^any

type Callback = ^^(error: Error, value: T) => ^^any

^^type ^^Callback^^<string ^^| ^^(a: number, b: string) => ^^void> = ^^(error: Error, value: T) => ^^any

^^ type ^^Foo <^^T > = ^^{

	^^foo: ^^T,
	^^bar: ^^number

^^}
-----------------------------------

Grammar: TypeScript.tmLanguage
-----------------------------------
>type Callback <T> = (error: Error, value: T) => any
 ^^^^
 [1, 1]: source.ts meta.type.declaration.ts storage.type.type.ts 
      ^^^^^^^^
      [1, 6]: source.ts meta.type.declaration.ts entity.name.type.alias.ts 
                ^
                [1, 16]: source.ts meta.type.declaration.ts meta.type.parameters.ts entity.name.type.ts 
                     ^
                     [1, 21]: source.ts meta.type.declaration.ts meta.type.function.ts meta.parameters.ts punctuation.definition.parameters.begin.ts 
>
>type Callback<T > = (error: Error, value: T) => any
 ^^^^
 [3, 1]: source.ts meta.type.declaration.ts storage.type.type.ts 
              ^
              [3, 14]: source.ts meta.type.declaration.ts meta.type.parameters.ts punctuation.definition.typeparameters.begin.ts 
                     ^
                     [3, 21]: source.ts meta.type.declaration.ts meta.type.function.ts meta.parameters.ts punctuation.definition.parameters.begin.ts 
                                              ^^
                                              [3, 46]: source.ts meta.type.declaration.ts meta.type.function.return.ts storage.type.function.arrow.ts 
                                                 ^^^
                                                 [3, 49]: source.ts meta.type.declaration.ts meta.type.function.return.ts support.type.primitive.ts 
>
>type Callback = (error: Error, value: T) => any
                 ^
                 [5, 17]: source.ts meta.type.declaration.ts meta.type.function.ts meta.parameters.ts punctuation.definition.parameters.begin.ts 
                                             ^^^
                                             [5, 45]: source.ts meta.type.declaration.ts meta.type.function.return.ts support.type.primitive.ts 
>
>type Callback<string | (a: number, b: string) => void> = (error: Error, value: T) => any
 ^^^^
 [7, 1]: source.ts meta.type.declaration.ts storage.type.type.ts 
      ^^^^^^^^
      [7, 6]: source.ts meta.type.declaration.ts entity.name.type.alias.ts 
              ^
              [7, 14]: source.ts meta.type.declaration.ts meta.type.parameters.ts punctuation.definition.typeparameters.begin.ts 
                      ^
                      [7, 22]: source.ts meta.type.declaration.ts meta.type.parameters.ts keyword.operator.type.ts 
                        ^
                        [7, 24]: source.ts meta.type.declaration.ts meta.type.parameters.ts meta.type.function.ts meta.parameters.ts punctuation.definition.parameters.begin.ts 
                                                  ^^^^
                                                  [7, 50]: source.ts meta.type.declaration.ts meta.type.parameters.ts meta.type.function.return.ts support.type.primitive.ts 
                                                          ^
                                                          [7, 58]: source.ts meta.type.declaration.ts meta.type.function.ts meta.parameters.ts punctuation.definition.parameters.begin.ts 
                                                                                      ^^^
                                                                                      [7, 86]: source.ts meta.type.declaration.ts meta.type.function.return.ts support.type.primitive.ts 
>
> type Foo <T > = {
 ^
 [9, 1]: source.ts meta.type.declaration.ts 
       ^^^
       [9, 7]: source.ts meta.type.declaration.ts entity.name.type.alias.ts 
            ^
            [9, 12]: source.ts meta.type.declaration.ts meta.type.parameters.ts entity.name.type.ts 
                  ^
                  [9, 18]: source.ts meta.type.declaration.ts meta.object.type.ts punctuation.definition.block.ts 
>
>	foo: T,
  ^^^
  [11, 2]: source.ts meta.type.declaration.ts meta.object.type.ts meta.field.declaration.ts meta.definition.property.ts variable.object.property.ts 
       ^
       [11, 7]: source.ts meta.type.declaration.ts meta.object.type.ts meta.field.declaration.ts meta.type.annotation.ts entity.name.type.ts 
>	bar: number
  ^^^
  [12, 2]: source.ts meta.type.declaration.ts meta.object.type.ts meta.field.declaration.ts meta.definition.property.ts variable.object.property.ts 
       ^^^^^^
       [12, 7]: source.ts meta.type.declaration.ts meta.object.type.ts meta.field.declaration.ts meta.type.annotation.ts support.type.primitive.ts 
>
>}
 ^
 [14, 1]: source.ts meta.type.declaration.ts meta.object.type.ts punctuation.definition.block.ts 